[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Classic-Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://AboutScreen.gd" type="Script" id=2]
[ext_resource path="res://Components/Transition_Out.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Not.png" type="Texture" id=4]
[ext_resource path="res://Sprites/And.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Or.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Xor.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="TutorialScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="Menu" type="Button" parent="HBoxContainer"]
margin_right = 92.0
margin_bottom = 26.0
custom_colors/font_color_hover = Color( 0, 0.0627451, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.937255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Menu"

[node name="Transition_Out" parent="." instance=ExtResource( 3 )]

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.0
margin_top = -150.0
margin_right = 345.0
margin_bottom = 150.0
custom_constants/separation = 30

[node name="ControlLevel1" type="Control" parent="HBoxContainer2"]
margin_right = 150.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 300 )

[node name="NOT" type="Button" parent="HBoxContainer2/ControlLevel1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -25.0
margin_right = 32.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="HBoxContainer2/ControlLevel1/NOT"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = 11.0
margin_right = 33.0
margin_bottom = 25.0
text = "Porta NOT"
align = 1

[node name="Sprite" type="Sprite" parent="HBoxContainer2/ControlLevel1/NOT"]
position = Vector2( 32, 24 )
texture = ExtResource( 4 )

[node name="ControlLevel2" type="Control" parent="HBoxContainer2"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 300 )

[node name="AND" type="Button" parent="HBoxContainer2/ControlLevel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -26.0
margin_right = 38.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 50 )
text = "2"
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="HBoxContainer2/ControlLevel2/AND"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -33.5
margin_top = 11.0
margin_right = 32.5
margin_bottom = 25.0
text = "Porta AND"
align = 1

[node name="Sprite" type="Sprite" parent="HBoxContainer2/ControlLevel2/AND"]
position = Vector2( 37, 24 )
texture = ExtResource( 5 )

[node name="ControlLevel3" type="Control" parent="HBoxContainer2"]
margin_left = 360.0
margin_right = 510.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 300 )

[node name="OR" type="Button" parent="HBoxContainer2/ControlLevel3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -25.0
margin_right = 32.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
text = "3"
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="HBoxContainer2/ControlLevel3/OR"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 20.0
text = "Porta OR"
align = 1

[node name="Sprite" type="Sprite" parent="HBoxContainer2/ControlLevel3/OR"]
position = Vector2( 40, 24 )
texture = ExtResource( 6 )

[node name="ControlLevel4" type="Control" parent="HBoxContainer2"]
margin_left = 540.0
margin_right = 690.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 300 )

[node name="XOR" type="Button" parent="HBoxContainer2/ControlLevel4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -25.0
margin_right = 42.5
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
text = "4"
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="HBoxContainer2/ControlLevel4/XOR"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "Porta XOR"
align = 1

[node name="Sprite" type="Sprite" parent="HBoxContainer2/ControlLevel4/XOR"]
position = Vector2( 45, 24 )
texture = ExtResource( 7 )

[connection signal="pressed" from="HBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="HBoxContainer2/ControlLevel1/NOT" to="." method="_on_NOT_pressed"]
[connection signal="pressed" from="HBoxContainer2/ControlLevel2/AND" to="." method="_on_AND_pressed"]
[connection signal="pressed" from="HBoxContainer2/ControlLevel3/OR" to="." method="_on_OR_pressed"]
[connection signal="pressed" from="HBoxContainer2/ControlLevel4/XOR" to="." method="_on_XOR_pressed"]
